# crypto-trends

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  TASK.md  docker-compose.yml  pyproject.toml  requirements.txt
services/alerter/: app.py
services/collector/: app.py
services/processor/: app.py
services/ui/: app.py
tests/: test_coingecko_fetch.py
tests/artifacts/: coingecko_bitcoin_24h.csv  collector_bitcoin_24h_15m.csv
